Alignment fixed

--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ footer p {
 }
 
 h1 {
-    text-align: start;
+    text-align: center;
     font-size: 40px;
 }
 
